# thermal-multi-node-analysis-sat-contest

./: .gitignore  README.md  batch_analysis.py  compare_temperature_data.py  multi-node_analysis.py  pyproject.toml
doc/: component_conduction_changes.md  internal_heat_changes.md  lunar_orbit_adaptation.md
output_check_axis_setting_MZMY/earth_orbit_alt1000.0_beta90.0/settings/: component_properties.yaml  constants.yaml  material_properties.yaml
output_check_axis_setting_PZPY/earth_orbit_alt1000.0_beta90.0/settings/: constants.yaml
settings/: cij_matrix.csv  component_properties.yaml  constants.yaml  material_properties.yaml  surface_properties.yaml
utils/: config_loader.py  dataclasses.py  orbit_utils.py  plotting_utils.py  satellite_config.py  thermal_utils.py
