[project]
name = "multi-node-analysis"
version = "1.0.0"
description = "衛星の多節点熱解析プログラム"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "pyyaml>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "multi-node_analysis.py",
    "settings/constants.yaml",
    "settings/surface_properties.yaml",
    "settings/material_properties.yaml",
    "utils/*.py",
]
